--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
     "paths": {
       "leetcode/*": ["src/leetcode/*"],
       "types/*": ["src/types/*"],
-      "utils/*": ["src/utils/*"],
-      "utils": ["src/utils"]
+      "utils/*": ["src/utils/*"]
     }
   },
   "include": ["src", "__test__"]
